--- a/MVC/CIPlatform/CIPlatform/Views/Home/Index.cshtml
+++ b/MVC/CIPlatform/CIPlatform/Views/Home/Index.cshtml
@@ -1,4 +1,10 @@
-﻿@{
+﻿@model CIPlatform.Models.LoginModel
+
+
+
+
+
+@{
     ViewData["Title"] = "CI Login";
 }
 
@@ -104,21 +110,37 @@
 
                 <div class="col-lg-4">
 
+                    @using (Html.BeginForm("Index","Home", FormMethod.Post)){
+
+                            if(ViewBag.LoginStatus != null)
+                            {
+                                if(ViewBag.LoginStatus == 0)
+                                {
+                                    <div class="alert alert-danger">Invalid Login Credentials</div>
+                                }
+                            }
+                        
+
+
+
                     <div class="login-form">
 
                         <label class="lbl-email">Email Address</label>
                         <br>
 
-                        <input type="text" class="txt-inp" placeholder=" Enter your email address">
+                        @Html.TextBoxFor(u => u.LoginId, new {@class = "txt-inp", @placeholder=" Enter your email address"})
+                        
+                        @*<input type="text" asp-for="User.Email" class="txt-inp" placeholder=" Enter your email address">*@
 
                         <br>
 
                         <label class="lbl-pass">Password</label>
                         <br>
-                        <input type="password" name="password" class="txt-inp" placeholder=" Enter your password">
+                        @Html.TextBoxFor(u => u.Password, new {@class = "txt-inp", @placeholder=" Enter your password"})
+                        @*<input type="password" asp-for="User.Password" name="password" class="txt-inp" placeholder=" Enter your password">*@
                         <br>
 
-                        <button class="btn-login">
+                        <button type="submit" class="btn-login">
 
                             <lable class="lbl-login">Login</lable>
 
@@ -138,7 +160,7 @@
                       
 
                     </div>
-
+                    }
                 </div>
 
             </div>
